...
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:hint="No more than 20 words"
        android:gravity="center"
        android:id="@+id/notesUpdate" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/green"
...
